# my-nosql-contracts

./: Cargo.toml
.github/workflows/: ci.yml  rust.yml
src/: JSON  account_candle.rs  account_trade.rs  banner_entity.rs  bid_ask_snapshot_model.rs  brands.rs  broker_no_sql.rs  broker_settings_entity.rs  certificate_statistics_settings.rs  cfd_bridge_cache.rs  chart_current_day_entity.rs  chart_current_day_entiy.rs  company_properties_entity.rs  current_balance_entity.rs  dash_board_brief_statistics_entity.rs  default_favorite_instruments.rs  default_value.rs  email_template.rs  fav_instruments_cache.rs  features_entity.rs  file_entity.rs  highlight_card_entity.rs  identomat_cache.rs  instrument_avatar.rs  instrument_group.rs  instrument_mapping_entity.rs  intraday_settings_entity.rs  key_value_cache.rs  kyc_identomat_cache.rs  kyc_proof_type_no_sql.rs  language_content_entity.rs  lib.rs  loss_analysis_entity.rs  max_allocation_entity.rs  payment_page.rs  payout_schedule_settings_entity.rs  payout_settings_entity.rs  payout_withdrawal_limit_settings_entity.rs  payout_withdrawal_settings_entity.rs  personal_data.rs  (+23 more)
src/admin_notifications/: settings.rs
src/cfd_bridge/: cfd_account_type.rs  cfd_bridge_balance_cache.rs  cfd_bridge_trader_cache.rs  mod.rs
src/cfd_cross_margin_bridge/: cfd_cross_margin_account_type.rs  cfd_cross_margin_bridge_balance_cache.rs  cfd_cross_margin_bridge_trader_cache.rs  mod.rs
src/common/: mod.rs  trader_account_type.rs
src/product_settings/: acqufy_settings.rs  activecampaign_settings.rs  affiliate_settings.rs  brand_settings.rs  bridgerpay_settings.rs  chat_widget  chat_widget.rs  cross_margin_settings.rs  ctrader_settings.rs  email_type.rs  google_analytics_affiliate_settings.rs  google_analytics_settings.rs  identomat_settings.rs  keitaro_settings.rs  kyc_settings.rs  meta_pixel_settings.rs  mod.rs  payout_settings.rs  pixel_tik_tok_settings.rs  product_settings.rs  recapcha_settings.rs  recaptcha_settings.rs  send_grid_extended_settings.rs  send_grid_settings.rs  send_grid_settings_extended.rs  sentry_settings.rs  trade_locker_settings.rs  trading_packages_settings.rs  trading_platform_settings.rs
src/rest_api_cache/: mod.rs  trader_account_http.rs  trading_package_list.rs
