[package]
name = "my-nosql-contracts"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dashboard-statistics = []
trader-accounts = []
chart-current-day = []
current-balance = []
payout-schedule-settings = []
trader-platform-credentials = []
trader-blockers = []
company-properties = []
trader-account-cache-delay = []
trading-platform-settings = []
user-profile-visible-fields = []
user_profile_report_template = []

# List of features provided by this package. use to check that all features are building 
# cargo build --features all
all = [
    "dashboard-statistics",
    "trader-accounts",
    "chart-current-day",
    "current-balance",
    "payout-schedule-settings",
    "trader-platform-credentials",
    "trader-blockers",
    "company-properties",
    "trader-account-cache-delay",
    "trading-platform-settings",
    "user-profile-visible-fields",
    "user_profile_report_template"
]

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"