[package]
name = "my-nosql-contracts"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dashboard-statistics = []
trader-accounts = []
chart-current-day = []
current-balance = []
payout-schedule-settings = []
trader-platform-credentials = []
trader-blockers = []
company-properties = []
trader-account-cache-delay = []
user-profile-visible-fields = []
user-profile-field-template = []
product-settings = []
woo-commerce = []
kyc-identomat-cache = []
payout-withdrawal-settings = []
cfd-bridge-cache=[]
language-content=[]
features-entity=[]
cfd-cross-margin-bridge-cache=[]
payout-withdrawal-limit-settings=[]
intraday-settings=[]
max-allocation=[]
trading-metrics=[]
rest-api-cache=[]
payment-page=[]
account-candle=[]
platform-info=[]
profit-widget=[]
personal-data=[]
account-trade=[]
file=[]
# List of features provided by this package. use to check that all features are building
# cargo build --features all
all = [
    "dashboard-statistics",
    "trader-accounts",
    "chart-current-day",
    "current-balance",
    "payout-schedule-settings",
    "trader-platform-credentials",
    "trader-blockers",
    "company-properties",
    "trader-account-cache-delay",
    "user-profile-visible-fields",
    "user-profile-field-template",
    "product-settings",
    "woo-commerce",
    "kyc-identomat-cache",
    "payout-withdrawal-settings",
    "cfd-bridge-cache",
    "language-content",
    "features-entity",
    "cfd-cross-margin-bridge-cache",
    "payout-withdrawal-limit-settings",
    "intraday-settings",
    "max-allocation",
    "trading-metrics",
    "rest-api-cache",
    "payment-page",
    "account-candle",
    "platform-info",
    "profit-widget",
    "personal-data",
    "account-trade",
    "file",
]

[dependencies]
service-sdk = { tag = "0.4.2", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

serde = { version = "*", features = ["derive"] }
